--- a/index.html
+++ b/index.html
@@ -1,25 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-  <div>
-    <header class="header">
-      <div>icono</div>
-      <div>
-        <h2>Licrochet</h2>
-        <div>
-          <h3>Carrito</h3>
-          <a href="#">Carrito</a>
-        </div>
-      </div>
-    </header>
+  <header>
+    <div class="logo">
+    <img src="https://yaestariacrochet.com/cdn/shop/files/Logo-Ya_estariia-crochet.png?v=1681146302&width=500" alt="">
+    <div class="container-title">
+      <a href="#" class="letra">licrochet</a>
+     <a href="#" class="letra">carrito</a>
+    </div>
+     
+    </div>
+    <nav class="nav">
+      <ul>
+        <li><a href="">Inicio</a></li>
+        <li><a href="">Lanas</a></li>
+        <li><a href="">Hilos</a></li>
+        <li><a href="">Agujas</a></li>
+        <li><a href="">Patrones</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div class="container">
+    <div class="producto">
+      <img src="https://media.revistavanityfair.es/photos/6479bb8d04d18b9f50a96765/master/w_320%2Cc_limit/Captura%2520de%2520pantalla%25202023-05-31%2520a%2520las%252016.57.03.png" alt="bolso" >
+      <a href="#">agregar al carrito</a>
+      <a href="#">Ver mas</a>
+    </div>
+    <div class="producto">
+      <img src="https://media.revistavanityfair.es/photos/6479bb8d04d18b9f50a96765/master/w_320%2Cc_limit/Captura%2520de%2520pantalla%25202023-05-31%2520a%2520las%252016.57.03.png" alt="bolso" >
+      <a href="#">agregar al carrito</a>
+      <a href="#">Ver mas</a>
+    </div>
+    <div class="producto">
+      <img src="https://media.revistavanityfair.es/photos/6479bb8d04d18b9f50a96765/master/w_320%2Cc_limit/Captura%2520de%2520pantalla%25202023-05-31%2520a%2520las%252016.57.03.png" alt="bolso" >
+      <a href="#">agregar al carrito</a>
+      <a href="#">Ver mas</a>
+    </div>
+    
   </div>
 </body>
 
