--- a/index.html
+++ b/index.html
@@ -13,35 +13,35 @@
     <div class="logo">
     <img src="https://yaestariacrochet.com/cdn/shop/files/Logo-Ya_estariia-crochet.png?v=1681146302&width=500" alt="">
     <div class="container-title">
-      <a href="#" class="letra">licrochet</a>
+      <a href="#" class="letra">Licrochet</a>
      <a href="#" class="letra">carrito</a>
     </div>
      
     </div>
     <nav class="nav">
       <ul>
-        <li><a href="">Inicio</a></li>
-        <li><a href="">Lanas</a></li>
-        <li><a href="">Hilos</a></li>
-        <li><a href="">Agujas</a></li>
-        <li><a href="">Patrones</a></li>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="html/lanas.html">Lanas</a></li>
+        <li><a href="html/hilos.html">Hilos</a></li>
+        <li><a href="html/agujas.html">Agujas</a></li>
+        <li><a href="html/patrones.html">Patrones</a></li>
       </ul>
     </nav>
   </header>
   <div class="container">
     <div class="producto">
-      <img src="https://media.revistavanityfair.es/photos/6479bb8d04d18b9f50a96765/master/w_320%2Cc_limit/Captura%2520de%2520pantalla%25202023-05-31%2520a%2520las%252016.57.03.png" alt="bolso" >
-      <a href="#">agregar al carrito</a>
+      <img  src="https://hips.hearstapps.com/hmg-prod/images/bolso-crochet-1652785699.jpg?crop=1.00xw:0.908xh;0,0.0916xh&resize=640:*" alt="bolso" >
+      <a href="#">Agregar al carrito</a>
       <a href="#">Ver mas</a>
     </div>
     <div class="producto">
-      <img src="https://media.revistavanityfair.es/photos/6479bb8d04d18b9f50a96765/master/w_320%2Cc_limit/Captura%2520de%2520pantalla%25202023-05-31%2520a%2520las%252016.57.03.png" alt="bolso" >
-      <a href="#">agregar al carrito</a>
+      <img  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8AJXYpIb21IujikuizFF1pm1qqESSl-CJ7w&usqp=CAU " alt="bolso" >
+      <a href="#">Agregar al carrito</a>
       <a href="#">Ver mas</a>
     </div>
     <div class="producto">
-      <img src="https://media.revistavanityfair.es/photos/6479bb8d04d18b9f50a96765/master/w_320%2Cc_limit/Captura%2520de%2520pantalla%25202023-05-31%2520a%2520las%252016.57.03.png" alt="bolso" >
-      <a href="#">agregar al carrito</a>
+      <img  src=" https://i.ytimg.com/vi/MQQeBGIPCG4/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLDM3eXl3S5IKHB6s0ptZymcFhZa8Q" alt="bolso" >
+      <a href="#">Agregar al carrito</a>
       <a href="#">Ver mas</a>
     </div>
     
