--- a/html/patrones.html
+++ b/html/patrones.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/stylepatrones.css">
 </head>
 <body>
-    
-    <a href="../index.html">←Volver atrás</a> 
+    <header>
+        <div class="logo">
+        <img src="https://yaestariacrochet.com/cdn/shop/files/Logo-Ya_estariia-crochet.png?v=1681146302&width=500" alt="">
+        <div class="container-title">
+          <a href="#" class="letra">Licrochet</a>
+         <a href="#" class="letra">carrito</a>
+        </div>
+         
+        </div>
+        <nav class="nav">
+          <ul>
+            <li><a href="html/lanas.html">Lanas</a></li>
+          </ul>
+        </nav>
+      </header>
+    <div class="container">
+        <div class="producto">
+          <img  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSs7mhGFO0aLnh9mp0Kd4DnGko6ArvtY0goNQ&usqp=CAU" alt="bolso" >
+          <a href="#">Agregar al carrito</a>
+          <a href="#">Ver mas</a>
+        </div>
+        <div class="producto">
+          <img  src=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTGCsIYYmXVl_wK3qOqKWc6qOcljMiFED-sw&usqp=CAU" alt="bolso" >
+          <a href="#">Agregar al carrito</a>
+          <a href="#">Ver mas</a>
+        </div>
+        <div class="producto">
+          <img  src=" https://http2.mlstatic.com/D_NQ_NP_910853-MLM49390561435_032022-O.webp" alt="bolso" >
+          <a href="#">Agregar al carrito</a>
+          <a href="#">Ver mas</a>
+        </div>
+      </div>  
+      <footer>
+        <a href="../index.html">←Volver atrás</a> 
+      </footer>
 </body>
 </html>
