--- a/html/agujas.html
+++ b/html/agujas.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/styleagujas.css">
 </head>
 <body>
-    <a href="../index.html">←Volver atrás</a>
+    <header>
+        <div class="logo">
+        <img src="https://yaestariacrochet.com/cdn/shop/files/Logo-Ya_estariia-crochet.png?v=1681146302&width=500" alt="">
+        <div class="container-title">
+          <a href="#" class="letra">Licrochet</a>
+         <a href="#" class="letra">carrito</a>
+        </div>
+         
+        </div>
+        <nav class="nav">
+          <ul>
+            <li><a href="html/lanas.html">Lanas</a></li>
+          </ul>
+        </nav>
+      </header>
+    <div class="container">
+        <div class="producto">
+          <img  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT8omrP0QS2Jlg27e87QC1MHIVXLZr4hVVC4A&usqp=CAU" alt="bolso" >
+          <a href="#">Agregar al carrito</a>
+          <a href="#">Ver mas</a>
+        </div>
+        <div class="producto">
+          <img  src=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT3FQE7kPWidzjnVjLHT7p064tn5iFUYZ_vqw&usqp=CAU" alt="bolso" >
+          <a href="#">Agregar al carrito</a>
+          <a href="#">Ver mas</a>
+        </div>
+        <div class="producto">
+          <img  src=" https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQlBrYKuwNwB_DXR9X2huZr9Tp14fQZ8c4fdA&usqp=CAU" alt="bolso" >
+          <a href="#">Agregar al carrito</a>
+          <a href="#">Ver mas</a>
+        </div>
+      </div> 
+      <footer>
+        <a href="../index.html">←Volver atrás</a>
+      </footer> 
 </body>
 </html>
