--- a/html/hilos.html
+++ b/html/hilos.html
@@ -4,13 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/stylehilos.css">
 
 </head>
 <body>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRbLpLEc9E3FbrMdp0HOu8TQtBj6lrIQvm2vg&usqp=CAU" alt="">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6oFbSuWE-UZCZ7gn_ffXyXHrr5YmBoBJdAg&usqp=CAU" alt="">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpy7WrwB5AKTBA7kWZYSX50atploH2fT7wlQ&usqp=CAU" alt="">
-    
+    <header>
+        <div class="logo">
+        <img src="https://yaestariacrochet.com/cdn/shop/files/Logo-Ya_estariia-crochet.png?v=1681146302&width=500" alt="">
+        <div class="container-title">
+          <a href="#" class="letra">Licrochet</a>
+         <a href="#" class="letra">carrito</a>
+        </div>
+         
+        </div>
+        <nav class="nav">
+          <ul>
+            <li><a href="html/lanas.html">Lanas</a></li>
+          </ul>
+        </nav>
+      </header>
+    <div class="container">
+        <div class="producto">
+          <img  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6oFbSuWE-UZCZ7gn_ffXyXHrr5YmBoBJdAg&usqp=CAU" alt="bolso" >
+          <a href="#">Agregar al carrito</a>
+          <a href="#">Ver mas</a>
+        </div>
+        <div class="producto">
+          <img  src="https://http2.mlstatic.com/D_NQ_NP_874303-MCO45658384593_042021-O.webp" alt="bolso" >
+          <a href="#">Agregar al carrito</a>
+          <a href="#">Ver mas</a>
+        </div>
+        <div class="producto">
+          <img  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRpy7WrwB5AKTBA7kWZYSX50atploH2fT7wlQ&usqp=CAU " alt="bolso" >
+          <a href="#">Agregar al carrito</a>
+          <a href="#">Ver mas</a>
+        </div>
+      </div>  
     <a href="../index.html">←Volver atrás</a>
 </body>
 </html>
