--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img src="https://yaestariacrochet.com/cdn/shop/files/Logo-Ya_estariia-crochet.png?v=1681146302&width=500" alt="">
     <div class="container-title">
       <a href="#" class="letra">Licrochet</a>
-     <a href="#" class="letra">carrito</a>
+     <a href="#" class="carrito"> <img src="https://cdn-icons-png.flaticon.com/256/3144/3144456.png" alt="">carrito</a>
     </div>
      
     </div>
@@ -46,8 +46,23 @@
       <a href="#">Ver mas</a>
     </div>
   </div>
-  <footer><h2>contactanos</h2></footer>
-  
+  <footer class="footer">
+    <h2>contactanos</h2>
+    <div class="footer_social">
+      <div class="icon_text">
+        <a href="#" class="footer_icon"><img src="icons/facebook.svg" alt="Icon Facebook" class="footer_img"></a>
+        <span>Liceth Contreras</span>
+      </div>
+      <div>
+        <a href="#" class="footer_icon"><img src="icons/instagram.svg" alt="Icon Instagram" class="footer_img"></a>
+        <span>Liceth Contreras</span>
+      </div>
+      <div>
+        
+      </div>
+  </div>
+  </footer>
+
 </body>
 
 </html>z
